Updated gradle build tools; Added unit tests;