@@ -17,6 +17,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    android.testOptions.unitTests.all {
+
+        // Configure max heap size of the test JVM
+        maxHeapSize = '2048m'
+
+        // Configure the test JVM arguments - Does not apply to Java 8
+        //jvmArgs '-XX:MaxPermSize=4096m', '-XX:-UseSplitVerifier'
+
+        //see:http://stackoverflow.com/a/35059995
+        jvmArgs '-XX:MaxPermSize=4096m', '-noverify'
+
+        // Specify max number of processes (default is 1)
+        maxParallelForks = 4
+
+        // Specify max number of test classes to execute in a test process
+        // before restarting the process (default is unlimited)
+        //forkEvery = 250
+
+        // configure whether failing tests should fail the build
+        ignoreFailures false
+
+        // use afterTest to listen to the test execution results
+        afterTest { descriptor, result ->
+            println "Executing test for ${descriptor.parent}: ${descriptor.name} with result: ${result.resultType}"
+        }
+    }
 }
 
 dependencies {
